added imgs, changed the rectangle as a monster, added a sun, played w/imgs

--- a/simple canvas/control.css
+++ b/simple canvas/control.css
@@ -14,11 +14,12 @@ body {
     align-content:space-around;
     /*    background-color:#202830;*/
     background-color:#ffffff;
-    color:#ffffff;
+    color:black;
     display:grid;
     justify-content:center;
 }
 
 canvas {
     background-color: #ffffff;
+   /* border: 1px  black; */
 }
