End game correctly with appropriate message.

--- a/simple canvas/control.css
+++ b/simple canvas/control.css
@@ -39,3 +39,9 @@ body {
     font-size: 2em;
     font-family: "Courier New";
 }
+#congrats{
+    margin: auto;
+    color: #202830;
+    font-size: 2em;
+    font-family: "Courier New";
+}
