--- a/simple canvas/control.css
+++ b/simple canvas/control.css
@@ -22,7 +22,7 @@ body {
 #main{
     display: none;
 }
-#newGame{
+#newGame, #tuto{
     text-align: center;
     vertical-align: middle;
     color: #A9A9A9;
@@ -44,4 +44,11 @@ body {
     color: #202830;
     font-size: 2em;
     font-family: "Courier New";
+}
+#tutoExplanation{
+    background: #202830;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 32px;
+    text-align: center;
 }
