--- a/simple canvas/control.css
+++ b/simple canvas/control.css
@@ -46,9 +46,9 @@ body {
     font-family: "Courier New";
 }
 #tutoExplanation{
-    background: #202830;
+    background: #ffffff;
     color: #fff;
-    font-family: sans-serif;
-    font-size: 32px;
+    font-family: "Courier New";
+    font-size: 25px;
     text-align: center;
 }
